# IDS-RAG

./: .data.yaml  .gitignore  Modelfile  README.md  config.yaml  protokoll.md  pyproject.toml  requirements.txt  setup.py  simulate_zeek_tsv.py  skizze.excalidraw
knowledge_base/: threat_intel.yaml
src/ids_rag/: __init__.py  alert_parser.py  cli.py  knowledge_sync.py  rag_system.py  zeek_monitor.py
